--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+.todoBox {
+    width: 800px;
+    height: 800px;
+    margin: 80px auto;
+    border: 3px solid rgb(203, 229, 252);
+    border-radius: 10px;
+    background-color: aliceblue;
+}
+
 header {
     width: 100%;
     margin: 50px auto;
