--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ header {
 .selectSection {
     display: flex;
     justify-content: center;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 
 .btn-all {
@@ -71,15 +71,23 @@ header {
     background-color: rgb(112, 139, 233);
 }
 
-.inputSection {
+.inputBox {
+    height: 100px;
+}
+
+.input_box {
     display: flex;
     justify-content: center;
+    margin-bottom: 5px;
 }
 
 .inputTxt {
+    width: 80%;
+    padding-bottom: 5px;
     font-size: 15px;
-    border: 2px solid rgb(3, 3, 3);
-    border-radius: 5px;
+    border: none;
+    border-bottom: 2px solid rgb(160, 207, 248);
+    background-color: transparent;
 }
 
 #addBtn {
@@ -95,14 +103,14 @@ header {
 .todo-list {
     width: 100%;
     height: 400px;
-    margin: 20px 0;
     overflow: auto;
     font-size: 15px;
-    background-color: rgb(204, 247, 252);
+    margin: 15px 0;
 }
 
 .list {
     width: 100%;
+    margin-bottom: 10px;
     display: flex;
     justify-content: center;
 }
@@ -111,31 +119,58 @@ input[type="checkbox"] {
     width: 13px;
     height: 13px;
     margin-right: 20px;
+    background-color: rgb(1, 39, 177);
+    color: white;
     border: 1px solid rgb(1, 39, 177);
     cursor: pointer;
 }
 
 input[type="checkbox"]:checked {
-    background-color: rgb(171, 244, 255);
+    color: white;
 }
 
 .listLb {
-    width: 90%;
+    width: 97%;
     display: inline-block;
     cursor: pointer;
 }
 
 .delBtn {
-    width: 10%;
+    width: 12px;
     display: inline-block;
-    text-align: end;
-    background-color: transparent;
+    text-align: center;
     font-size: 13px;
-    border: 2px solid rgb(249, 39, 91);
-    border-radius: 3px;
-    background-color:rgb(249, 39, 91)
+    border: none;
+    background-color:transparent;
 }
 
 .delBtn:hover {
-    background-color: rgb(208, 0, 52);
+    color: rgb(249, 18, 75);
+}
+
+.allSelect {
+    display: flex;
+    justify-content: space-between;
+}
+
+.allCheck {
+    color: black;
+}
+
+.allCheck:hover {
+    color: rgb(164, 2, 43);
+}
+
+.allDelete {
+    color: black;
+    text-decoration: none;
+}
+
+.allDelete:hover{
+    color: rgb(249,18, 75);
+}
+
+.notice {
+    color:rgb(164, 2, 43);
+    font-size: 10px;
 }
